# ND2

./: .gitignore  README.md  pyproject.toml  search.py  search.sh  setup.py  simulate.py  train.py
ND2/: GDExpr.py  sympy_utils.py
ND2/dataset/: dataset.py  generator.py
ND2/env/: __init__.py  symbols.py  utils.py
ND2/model/: __init__.py  model.py  trainer.py  utils.py
ND2/search/: mcts.py  reward_solver.py
ND2/utils/: __init__.py  attr_dict.py  auto_gpu.py  logger.py  metrics.py  plot.py  timer.py  timing.py  utils.py
config/: community_network.yaml  hetero.yaml  hetero_edge.yaml  synthetic.yaml
data/bacteria/: README.md
data/epidemic/: COVID-19_Cases__Tests__and_Deaths_by_ZIP_Code_-_Historical.csv  COVID19inCHI.json  COVID19inCN.json  COVID19inILS.json  COVID19inNYC.json  COVID19inNYS.json  COVID19inUS.json  COVID19inWorld.json  ODinCN.csv  ODinUS.csv  ODinWorld.csv  README.md  US-2020.csv  ZCTA-to-MODZCTA.csv  caserate-by-modzcta.csv  cftss-hcbs_kids_fips.xlsx  covid19.json  feynman_strogatz_eqs.yaml  hosp-by-day.csv  hosprate-by-modzcta.csv  load_eqtrees.txt  tract2modzcta.json
data/gene/: 2010.Spellman98_alphaFactor.flt.knn.avg.pcl  2010.Spellman98_cdc15.flt.knn.avg.pcl  README.md  (+2 more)
scripts/: COVID19_CN.ipynb  COVID19_US.ipynb  COVID19_World.ipynb  README.md  bacteria-search.py  baseline_MPNN.py  baseline_MPNN_gs.sh  baseline_NDCN.py  baseline_NDCN_gs.sh  baseline_TwoPhase.py  baseline_TwoPhase.sh  baseline_TwoPhase2.sh  epidemic-search.py  gene-search.py  search_bacteria.py  search_hetero.py  search_hidden_edge_weight.py  search_unknown_network.py
(+42 files in other folders)
