[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ND2"
version = "1.1.0"
description = "ND2 symbolic regression"
authors = [{name="YuMeow", email="yuzh19@tsinghua.org.cn"}]
requires-python = ">=3.8"
dependencies = [
  "tqdm>=4.66",
  "pytest>=8.3",
  "numpy>=1.20",
  "scipy>=1.14",
  "torch>=1.12",
  "pandas>=2.2",
  "scikit-learn>=1.5",
]
